my-home-cluster/apps/steps-analyzer/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: steps-analyzer
  name: steps-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: steps-analyzer
  strategy: {}
  template:
    metadata:
      labels:
        app: steps-analyzer
    spec:
      nodeSelector:
        kubernetes.io/hostname: server2
      containers:
        - image: treasuremeasure/steps-analyzer:1.0.0
          name: steps-analyzer
          ports:
            - containerPort: 8000
              name: http
      volumes:
        - name: migrations
          configMap:
            name: flyway-migrations
