my-home-cluster/apps/steps-analyzer/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: steps-analyzer
  name: steps-analyzer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: steps-analyzer
  type: ClusterIP
