my-home-cluster/apps/steps-analyzer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steps-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: steps.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: steps-analyzer
            port:
              number: 80
